// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SearchContainer render Adding a track to the mix works as expected 1`] = `
[
  {
    "type": "actionRemoveFromSearchResults",
    "uris": [
      "https://open.spotify.com/track/0c41pMosF5Kqwwetrack1",
    ],
  },
  {
    "track": {
      "album": {
        "name": "Album name 1",
      },
      "artist": {
        "name": "Artist name 1",
      },
      "image": "image1",
      "name": "Track name 1",
      "uri": "https://open.spotify.com/track/0c41pMosF5Kqwwetrack1",
    },
    "type": "curateAddTrackToMix",
  },
]
`;

exports[`SearchContainer render Adding a track works as expected 1`] = `
[
  {
    "open": true,
    "type": "actionToggleSearchSidebar",
  },
  {
    "key": "searchGetTracks",
    "params": {
      "options": {
        "limit": 20,
        "offset": 0,
      },
      "query": "happy",
    },
    "type": "actionTrackSearch",
  },
  {
    "type": "actionRemoveFromSearchResults",
    "uris": [
      "https://open.spotify.com/track/0c41pMosF5Kqwwetrack1",
    ],
  },
  {
    "key": "tracklist.add",
    "params": {
      "uris": [
        "spotify:track:0c41pMosF5Kqwwetrack1",
      ],
    },
    "type": "actionSend",
  },
  {
    "query": "spam",
    "type": "actionStoreSearchQuery",
  },
  {
    "key": "searchGetTracks",
    "params": {
      "options": {
        "limit": 20,
        "offset": 20,
      },
      "query": "happy",
    },
    "type": "actionTrackSearch",
  },
]
`;

exports[`SearchContainer render Adding tracks from the mix works as expected 1`] = `
[
  {
    "key": "tracklist.add",
    "params": {
      "uris": [
        "spotify:track:0c41pMosF5Kqwwetrack2",
        "spotify:track:0c41pMosF5Kqwwetrack3",
      ],
    },
    "type": "actionSend",
  },
  {
    "type": "searchClearMix",
  },
]
`;

exports[`SearchContainer render Does not add when more than 5 already added 1`] = `
[
  {
    "open": true,
    "type": "actionToggleSearchSidebar",
  },
  {
    "open": false,
    "type": "actionToggleSearchSidebar",
  },
]
`;

exports[`SearchContainer render Removing a track from the mix works as expected 1`] = `
[
  {
    "type": "curateRemoveTracksFromMix",
    "uri": "https://open.spotify.com/track/0c41pMosF5Kqwwetrack2",
  },
  {
    "key": "searchGetTracks",
    "params": {
      "options": {
        "limit": 20,
        "offset": 0,
      },
      "query": "happy",
    },
    "type": "actionTrackSearch",
  },
]
`;

exports[`SearchContainer render Swapping tracks from the mix works as expected 1`] = `
[
  {
    "a": 2,
    "b": 1,
    "type": "searchSwapTracks",
  },
]
`;
